--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="blog-carousel" class="carousel slide overlay-bottom" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/Logos/logo-header.avif" alt="Image">
+                    <img class="w-100" src="img/Product/pablo-merchan-montes.webp" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h1 class="display-1 text-white m-0">HiveMind</h1>
                         <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
@@ -143,9 +143,9 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <h4><i class="fa fa-coffee service-icon"></i>Fresh Coffee Beans</h4>
-                                    <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et
-                                        lorem dolor sed est sit
-                                        invidunt, dolore tempor diam ipsum takima erat tempor</p>
+                                    <p class="m-0">We get our coffee beans fresh everynight, and in the morning when we open we make ground down the 
+                                        coffee beans to be able to make your coffee.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                             <h1 class="mb-5">Food</h1>
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
-                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
+                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/Product/project-290.webp" alt="">
                                     <h5 class="menu-price">$1.99</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
@@ -191,7 +191,7 @@
                             </div>
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
-                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-2.jpg" alt="">
+                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/Product/oriol-portell.webp" alt="">
                                     <h5 class="menu-price">$1.99</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
@@ -202,7 +202,7 @@
                             </div>
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
-                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-3.jpg" alt="">
+                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/Product/heather-barnes.webp" alt="">
                                     <h5 class="menu-price">$3</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
