--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <h1 class="mb-5">Cold Coffee</h1>
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
-                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
+                                    <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/Product/ann.webp" alt="">
                                     <h5 class="menu-price">$5</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
@@ -373,7 +373,7 @@
 
                 <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5"
                     style="border-color: rgba(256, 256, 256, .1) !important;">
-                    <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">HiveMind</a>. All
+                    <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Arlo Jackson</a>. All
                         Rights Reserved.</a></p>
                 </div>
 
