--- a/food.html
+++ b/food.html
@@ -192,7 +192,6 @@
             <br>
             <p class="price"> $0.99</p>
             <p class="productContent"> Chocolate Chip Muffins</p>
-            <br />
             <input type="button" name="buy" value="Add to Cart" class="buyButton">
           </article>
           <!-- Three-->
@@ -262,7 +261,7 @@
 
         <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5"
             style="border-color: rgba(256, 256, 256, .1) !important;">
-            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">HiveMind</a>. All
+            <p class="mb-2 text-white">Copyright &copy; <a class="font-weight-bold" href="#">Arlo Jackson</a>. All
                 Rights Reserved.</a></p>
         </div>
 
