--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="CSS/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
