--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>HiveMind</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -25,8 +25,8 @@
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="CSS/style.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link href="/CSS/style.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 
 <body>
